--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "react-hot-toast": "^2.4.1",
-    "cross-env": "^7.0.3"  // Added cross-env here
+    "cross-env": "^7.0.3"
   }
 }
